--- a/css/style.css
+++ b/css/style.css
@@ -269,11 +269,12 @@ h6,
 
 
 .story-card {
-    background: rgba(0, 0, 0, 0.25);
+    background: rgba(195, 184, 184, 0.25);
     padding: 20px;
     border-radius: 12px;
     backdrop-filter: blur(6px);
     transition: 0.3s ease;
+    color: #0f0f0f;
 }
 
 .story-card h4 {
@@ -284,4 +285,98 @@ h6,
 .story-card:hover {
     transform: translateY(-5px);
     background: rgba(0, 0, 0, 0.35);
+}
+
+/* STOP horizontal scroll globally */
+html, body {
+    overflow-x: hidden;
+}
+
+
+
+
+
+
+.luxury-story {
+    padding-left: 30px;
+}
+
+/* Right side image */
+.lux-image img {
+    width: 100%;
+    height: 420px;
+    object-fit: cover;
+    border-radius: 22px;
+    box-shadow: 0 25px 50px rgba(0,0,0,0.15);
+}
+
+/* Full width cards */
+.lux-strip {
+    width: 100%;
+    background: #f4f0ee;
+    padding: 30px 35px;
+    margin-bottom: 25px;
+    border-radius: 20px;
+    box-shadow: 0 20px 40px rgba(0,0,0,0.08);
+    transition: all 0.4s ease;
+}
+
+.lux-strip.alt {
+    background: #ffffff;
+}
+
+.lux-strip:hover {
+    transform: translateY(-6px);
+    box-shadow: 0 20px 20px rgba(0,0,0,0.12);
+}
+
+.lux-strip h5 {
+    color: #ffb703;
+    font-size: 22px;
+    font-weight: 700;
+    margin-bottom: 10px;
+}
+
+.lux-strip p {
+    color: #333;
+    font-size: 16px;
+    line-height: 1.7;
+    margin-bottom: 0;
+}
+
+/* Highlight location */
+.lux-strip.location {
+    background: linear-gradient(135deg, #ffb703, #ff9f1c);
+}
+
+.lux-strip.location h5,
+.lux-strip.location p {
+    color: #fff;
+}
+
+/* Mobile responsive */
+@media (max-width: 991px) {
+    .luxury-story {
+        padding-left: 0;
+        margin-top: 30px;
+    }
+
+    .lux-image img {
+        height: 240px;
+    }
+}
+
+.right-bg {
+    background: #fff;
+    padding: 60px 80px 60px 60px;
+    height: 100%;
+    overflow-x: hidden;
+}
+
+/* Make background stretch till screen end */
+@media (min-width: 992px) {
+    .right-bg {
+        margin-right: -100vw;
+        padding-right: calc(100vw - 50%);
+    }
 }
